# PDCurses

./: CMakeLists.txt  CMakePresets.json  README.md  meson.build
.github/workflows/: ci.yml
cmake/: compilers.cmake  dos.cmake  install.cmake
common/: CMakeLists.txt  meson.build
demos/: CMakeLists.txt  meson.build  tui.c
docs/: README.md
pdcurses/: CMakeLists.txt  meson.build
wincon/: CMakeLists.txt  meson.build
x11/: CMakeLists.txt  meson.build
